# wasm-tutorial

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  common.mk
.github/workflows/: test-build.yml
boids/: Cargo.toml  Makefile  README.md
boids/src/: animation.rs  boids.rs  boids_shader.rs  camera.rs  entry_point.rs  error.rs  lib.rs  log.rs  shader.rs  utils.rs  ws.rs
crates/lqr/: Cargo.toml
crates/lqr/src/: lib.rs
crates/sc-test/: Cargo.toml
crates/sc-test/examples/: 01_local_spawn.rs  02_join.rs
crates/sc-test/src/: error.rs  lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: field.rs  lib.rs  object.rs  space.rs  unit.rs
crates/structured-concurrency/: Cargo.toml
crates/structured-concurrency/src/: main.rs
crates/wasm-utils-derive/: Cargo.toml
crates/wasm-utils-derive/src/: lib.rs
image_convert/: Cargo.toml  README.md
image_convert/src/: main.rs
src/: error.rs  lib.rs  webgl.rs
tests/: web.rs
wasm/asset-access/: Cargo.toml  Makefile
wasm/asset-access/src/: entry_point.rs  lib.rs  loader.rs  mouse.rs  target_shader.rs
wasm/async-flow/: Cargo.toml  Makefile
wasm/async-flow/src/: entry_point.rs  input.rs  layer.rs  lib.rs  util.rs
wasm/async-flow/src/input/: button.rs  mod.rs  select.rs  slider.rs  util.rs
wasm/async-flow/src/ui/: first.rs  mod.rs  request.rs  second.rs
wasm/blending/: Cargo.toml  Makefile
wasm/blending/src/: camera.rs  entry_point.rs  lib.rs  shader.rs  webgl.rs
wasm/boids/: Cargo.toml  Makefile
wasm/boids/src/: boids.rs  boids_shader.rs  camera.rs  entry_point.rs  lib.rs  log.rs  utils.rs  ws.rs
wasm/plot/: Cargo.toml  Makefile  README.md
wasm/plot/src/: entry_point.rs  lib.rs  plot.rs  shader.rs  viewport.rs
wasm/sim/: Cargo.toml
wasm/storage/: Cargo.toml  Makefile
wasm/storage/src/: entry_point.rs  lib.rs  storage.rs
wasm/utils/: Cargo.toml  Makefile
wasm/utils/src/: __reexport.rs  animation.rs  effect.rs  error.rs  lib.rs  macros.rs  mouse.rs  time.rs  util.rs  waitgroup.rs
wasm/utils/src/input/: button.rs  mod.rs  select.rs  slider.rs  textarea.rs  util.rs
wasm/utils/tests/: console.rs  test.rs  waitgroup.rs
wasm/webgl2/: Cargo.toml  Makefile
wasm/webgl2/src/: blend.rs  context.rs  font.rs  font_asset.rs  lib.rs  loader.rs  metrics.rs  program.rs  texture.rs  vertex.rs  viewport.rs
wasm/webgl2/src/font/: embed.rs  mod.rs
wasm/webgl2/src/shader/: mod.rs  pointing.rs  texture.rs
wasm/webgl2/testdata/: Ubuntu_Mono_64px.dxt1  Ubuntu_Mono_64px.lum
wasm/webgl2/tests/: font.rs  metris.rs  webgl.rs
wasm/wgol/: Cargo.toml  Makefile
wasm/wgol/src/: lib.rs
wasm/wgol/src/webgl/: basic_plane.rs  camera.rs  interaction.rs  mod.rs
web-server/: Cargo.toml
web-server/assets/: .gitignore  index.html  index.js
web-server/assets/asset-access/: index.html  index.js
web-server/assets/async-flow/: index.html  index.js
web-server/assets/blending/: index.html  index.js
web-server/assets/boids/: index.html  index.js
web-server/assets/plot/: index.html  index.js
web-server/assets/resources/fonts/: Ubuntu_Mono_64px.json
web-server/assets/storage/: index.html  index.js
web-server/src/: main.rs
webgl2/: Cargo.toml  Makefile
webgl2/src/: lib.rs  vertex.rs
webgl2/tests/: webgl.rs
wgol/: Cargo.toml  Makefile
wgol/src/: error.rs  lib.rs
wgol/src/webgl/: basic_plane.rs  interaction.rs  mod.rs  program.rs
www/: index.html  index.js  package-lock.json
