[package]
name = "boids"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen.workspace = true
webgl2.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "HtmlCanvasElement",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
opt-level = "s"
