[package]
name = "boids"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ciborium.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
futures.workspace = true
gloo-net.workspace = true
nalgebra-glm.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
webgl2 = { workspace = true, features = ["vertex"] }

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "HtmlCanvasElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
opt-level = "s"
