[package]
name = "web-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.7", features = ["json", "query", "ws"] }
ciborium.workspace = true
futures-util.workspace = true
hex_color = "3"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg", "webp", "qoi"] }
rand.workspace = true
serde.workspace = true
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.deb]
copyright = "Copyright (c) 2024, FUJINAKA Fumiya"
extended-description = ""
revision = ""
assets = [
  ["assets/**/*", "usr/share/web-server-wasm-tutorial/static/", "644"],
]
