[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
fixedbitset = "0.5.7"
js-sys = "0.3"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.42"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures-util = "0.3.30"
tokio = { version = "1.38.0", features = ["macros", "sync"] }
wasm-timer = "0.2.5"
thiserror = "1.0.61"
nalgebra-glm = "0.19.0"
tokio-util = "0.7.11"
serde = { version = "1", features = ["derive"] }
gloo-net = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "CanvasRenderingContext2d",
    "console",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "Performance",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
