[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { workspace = true, optional = true }
fixedbitset = "0.5.7"
futures = "0.3.30"
futures-util = "0.3.30"
gloo-net = { version = "0.5", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3"
nalgebra-glm = "0.19.0"
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1.38.0", features = ["macros", "sync"] }
tokio-util = "0.7.11"
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4.42"
wasm-timer = "0.2.5"
webgl2.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "CanvasRenderingContext2d",
    "console",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "Performance",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlRenderbuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
