[package]
name = "asset-access"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-timers.workspace = true
futures-util.workspace = true
fxhash.workspace = true
nalgebra.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-utils = { workspace = true, features = ["waitgroup"] }
webgl2 = { workspace = true, features = ["context", "shader", "viewport", "metrics"] }

[dependencies.web-sys]
workspace = true
features = [
    "HtmlImageElement",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
opt-level = "s"
