[package]
name = "async-flow"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures.workspace = true
fxhash.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-utils = { workspace = true, features = ["input"] }
webgl2 = { workspace = true, features = ["vertex", "context", "font-embed", "viewport"] }

[dependencies.web-sys]
workspace = true
features = []
