[package]
name = "async-flow"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures.workspace = true
fxhash.workspace = true
gloo-net = { workspace = true, features = ["http"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-utils = { workspace = true, features = ["input", "derive"] }
webgl2 = { workspace = true, features = ["vertex", "context", "font-embed", "viewport"] }

[dependencies.web-sys]
workspace = true
features = []
