[package]
name = "async-flow"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures.workspace = true
fxhash.workspace = true
gloo-net = { workspace = true, features = ["http"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-utils = { workspace = true, features = ["input", "derive", "time", "mouse", "effect"] }
webgl2 = { workspace = true, features = ["vertex", "context", "font-embed", "viewport", "pointing", "shader"] }

[dependencies.web-sys]
workspace = true
features = []
