[package]
name = "plot"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom.workspace = true
gloo-timers.workspace = true
nalgebra.workspace = true
rand.workspace = true
tokio.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-utils = { workspace = true }
webgl2 = { workspace = true, features = ["vertex", "context", "font"] }
futures-util.workspace = true

[dependencies.web-sys]
workspace = true
features = []

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
opt-level = "s"
