[package]
name = "wasm-storage"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util = { workspace = true }
fxhash.workspace = true
gloo-timers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-utils = { workspace = true, features = ["waitgroup"] }

[dependencies.web-sys]
workspace = true

features = [
    "Storage",
    "InputEvent",
    "HtmlInputElement"
]

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
opt-level = "s"
