[package]
name = "wasm-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["console_error_panic_hook"]
waitgroup = ["dep:futures-channel", "dep:futures-util"]
mouse = ["dep:fxhash", "web-sys/MouseEvent", "web-sys/WheelEvent", "web-sys/AddEventListenerOptions"]
input = [
    "dep:fxhash",
    "dep:futures-channel",
    "dep:futures-util",
    "web-sys/HtmlButtonElement",
    "web-sys/HtmlInputElement",
    "web-sys/HtmlOptionElement",
    "web-sys/HtmlSelectElement",
    "web-sys/HtmlTextAreaElement",
]
derive = ["dep:wasm-utils-derive"]
time = ["dep:futures-util"]

[dependencies]
console_error_panic_hook = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
fxhash = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-utils-derive = { workspace = true, optional = true}

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "Document",
    "DocumentTimeline",
    "Performance",
    "Window",
]

[dev-dependencies]
gloo-timers.workspace = true
wasm-bindgen-test.workspace = true
wasm-bindgen-futures.workspace = true

