[package]
name = "webgl2"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
context = ["web-sys/HtmlCanvasElement", "dep:serde"]
font = ["vertex", "texture", "context", "dep:fxhash", "dep:serde", "dep:nalgebra"]
font-embed = ["font", "dep:serde_json", "web-sys/WebglCompressedTextureS3tc"]
font-embed-compress = ["font-embed", "dep:include-bytes-zstd"]
shader = ["vertex", "dep:nalgebra"]
vertex = ["web-sys/WebGlBuffer"]
viewport = ["dep:nalgebra"]
metrics = []
texture = ["web-sys/WebGlTexture", "web-sys/HtmlImageElement", "web-sys/WebGlTexture"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
fxhash = { workspace = true, optional = true }
include-bytes-zstd = { version = "0.1.0", optional = true }
js-sys.workspace = true
nalgebra = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true
serde_json.workspace = true

[dev-dependencies.web-sys]
workspace = true
features = [
    'Element',
    'HtmlElement',
    'Node',
    "Document",
    "HtmlCanvasElement",
    "Window",
]
